feat: polygon integration in AFJ
